<resources>
    <string name="app_name">Tagged</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="find_a_device">Scan</string>
    <string name="ok">Ok</string>
    <string name="request_location_for_ble">Starting from Android M (6.0), the system requires apps to be granted location access in order to scan for BLE devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="device_name_placeholder">iTag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paired_device">Paired device</string>
    <string name="battery_level_format">Battery level : %s</string>
    <string name="no_devices">No connected devices ,Start scanning</string>
    <string name="connecting">Connecting ...</string>
</resources>