<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.omegaventions.taggedjava.modules.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/available_devices_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/available_devices"
            android:textColor="@color/color080B1C"
            android:textSize="@dimen/sp18"
            android:visibility="@{viewModel.scanResults.empty != true &amp;&amp; viewModel.scanResults != null}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scan_results_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp5"
            android:visibility="@{viewModel.scanResults.empty != true &amp;&amp; viewModel.scanResults != null}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/search_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/available_devices_tv"
            app:listData="@{viewModel.scanResults}"
            tools:itemCount="7"
            tools:listitem="@layout/list_item_scan_result" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/dp120"
            android:layout_height="@dimen/dp120"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/bk_search_btn"
            android:elevation="0dp"
            android:enabled="@{!viewModel.loading}"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/find_a_device"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="@dimen/sp12"
            android:visibility="@{!viewModel.connecting}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/no_devices_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp15"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/connecting"
            android:textColor="@color/color080B1C"
            android:textSize="@dimen/sp14"
            android:visibility="@{viewModel.connecting == true}"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dp8"
            android:indeterminateDrawable="@drawable/bk_progress_bar"
            android:visibility="@{viewModel.loading == true || viewModel.connecting == true}"
            app:layout_constraintBottom_toBottomOf="@+id/search_btn"
            app:layout_constraintEnd_toEndOf="@+id/search_btn"
            app:layout_constraintStart_toStartOf="@+id/search_btn"
            app:layout_constraintTop_toTopOf="@+id/search_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>